k8s/dev/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: <app-name>
  labels:
    project: <project-name>
    name: <app-name>
    type: <app-type>
spec:
  selector:
    matchLabels:
      app: <app-name>
  template:
    metadata:
      labels:
        app: <app-name>
    spec:
      containers:
        - name: <app-name>
          image: <IMAGE_URI>
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 16m
              memory: 32Mi
            limits:
              cpu: 1000m
              memory: 512Mi
          readinessProbe:
            failureThreshold: 2
            httpGet:
              path: <base-path>/health
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 5
            successThreshold: 1
            timeoutSeconds: 1
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: <base-path>/health
              port: 8080
            initialDelaySeconds: 7
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
      imagePullSecrets:
        - name: <cr-secret>
